# musicflow

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  todo.md
.claude/: settings.local.json
conf/: config.example.json  config.json  config.subsonic.example.json
docker/: Dockerfile  build_docker.sh  docker-compose.yml
docs/: SubsonicAPI.md  SubsonicAPI_Implementation.md  datasource-config.md  integration-progress.md  subsonic-integration-summary.md  tmp.json  web-media-session.md
initdb/: Cargo.toml  README.md
initdb/src/: main.rs
lib-utils/: Cargo.toml
lib-utils/examples/: test_datasource.rs  test_random_songs.rs  test_subsonic_client.rs
lib-utils/src/: comm.rs  config.rs  image.rs  lib.rs  log.rs  readmeta.rs  thread_pool.rs
lib-utils/src/database/: covert.rs  mod.rs  service.rs  table.rs
lib-utils/src/datasource/: factory.rs  local.rs  mod.rs  trait_def.rs  types.rs
lib-utils/src/datasource/local/: covert.rs  datasource.rs  mod.rs  service.rs  table.rs
lib-utils/src/datasource/subsonic/: auth.rs  client.rs  datasource.rs  mapper.rs  mod.rs
metadata/: README.md  alter.sql  db_album.ts  docker.ts  index.ts  package.json  picture_proc.ts  pnpm-lock.yaml  readmeta.ts  sql.ts  table.sql  task.ts  utils.ts
server/: Cargo.toml
server/conf/: config.json
server/src/: adapters.rs  controller_album.rs  controller_artist.rs  controller_favorite.rs  controller_genre.rs  controller_playlist.rs  controller_search.rs  controller_song.rs  controller_songlist.rs  controller_stream.rs  controller_tag.rs  controller_tool.rs  controller_user.rs  dbservice.rs  main.rs  metadata_reader.rs
web/: package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.js  tsconfig.json
web/public/: index.html  manifest.json  service-worker.js
web/src/: App.tsx  env.d.ts  index.tsx
web/src/components/: AlbumCard.tsx  AudioPlayer.tsx  Cover.tsx  DetailInfo.tsx  Drawer.tsx  ErrorBoundary.tsx  Form.tsx  Genre.tsx  Header.tsx  ImageViewer.tsx  Input.tsx  KeyboardShortcutViewer.tsx  LoadingBar.tsx  LoadingIndicator.tsx  Lyrics.tsx  MobileBottomNav.tsx  MusicCard.tsx  MusicList.tsx  MusicPlayer.tsx  MusicStatsCards.tsx  Option.tsx  PageTransition.tsx  Pagination.tsx  PerformanceMonitor.tsx  Player.tsx  Player_bak.tsx  Playlist.tsx  RandomSongs.tsx  RecommendationSections.tsx  SearchInput.tsx  SearchSuggestions.tsx  Settings.tsx  Skeleton.tsx  Tag.tsx  VirtualGrid.tsx  VolumeControl.tsx  confirm.tsx  theme-provider.tsx  theme-toggle.tsx
web/src/def/: CommDef.ts
web/src/hooks/: use-audio-progress.ts  use-click-outside.ts  use-desktop-lyrics.ts  use-device.ts  use-global-keyboard-shortcuts.ts  use-infinite-scroll.ts  use-keypress.ts  use-screen-status.ts  use-scrobble.ts  use-search.ts
web/src/lib/: api.ts  audio-cache.ts  defined.ts  log.ts  media-session.ts  readmeta.ts  streaming-loader.ts  utils.ts
web/src/pages/: FavoritesPage.tsx  HomePage.tsx  MoreInfoPage.tsx  MusicPlayPage.tsx  RecommendationAlbumsPage.tsx  RecommendationRandomPage.tsx  SearchPage.tsx  SettingsPage.tsx  SongListPage.tsx  TagPage.tsx
web/src/store/: current-play.ts  favorite.ts  home-page.ts  musicList.ts  playlist.ts  setting.ts
web/src/styles/: AudioPlayer.css  HomePage.css  globals.css
