[package]
name = "musicflow"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
actix-files = "0.6"
actix-cors = "0.6"

# music metadata
music-metadata = "0.3.0"
base64 = "0.13"