[workspace]
members = [ "server", "lib-utils", "initdb"]
resolver = "2"

[workspace.dependencies]

actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
actix-files = "0.6"
actix-cors = "0.7.0"
env_logger = "0.11.6"

# music metadata
music-metadata = "0.3.0"
base64 = "0.22.1"

# db
# 通过 bundled features 来启用静态链接, 可以让 rusqlite 自动下载并编译 SQLite 库，这样就不需要手动管理库文件了
rusqlite = { version = "0.32.1", features = ["bundled"]}

# metadata
symphonia = { version = "0.5.4", features = ["flac", "mp3"] }
symphonia-bundle-flac = "0.5.4"
symphonia-bundle-mp3 = "0.5.4"
symphonia-metadata = "0.5.4"

lib-utils = { path = "lib-utils" }
