[workspace]
members = [ "server", "lib-utils", "initdb"]
resolver = "2"
version = "1.2.0"

[workspace.dependencies]

actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
actix-files = "0.6"
actix-cors = "0.7.0"
env_logger = "0.11.6"

# music metadata
#music-metadata = "0.3.0"
#base64 = "0.22.1"
#image-base64 = "0.1.0"

# db
# 通过 bundled features 来启用静态链接, 可以让 rusqlite 自动下载并编译 SQLite 库，这样就不需要手动管理库文件了
rusqlite = { version = "0.32.1", features = ["bundled"]}

# metadata
symphonia = { version = "0.5.4", features = ["flac", "mp3"] }
symphonia-bundle-flac = "0.5.4"
symphonia-bundle-mp3 = "0.5.4"
symphonia-metadata = "0.5.4"
anyhow = "1.0.95"
webp = "0.3.0"
image = "0.25.5"
base64 = "0.22.1"
chrono = "0.4.39"
regex = "1.11.1"
rand = "0.8.5"
lib-utils = { path = "lib-utils" }

# Subsonic 客户端依赖
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
md-5 = "0.10"
hex = "0.4"
url = "2.5"
futures = "0.3"
