[package]
name = "musicflow"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
actix-files = { workspace = true }
actix-cors = { workspace = true }

# music metadata
music-metadata = { workspace = true }
base64 = { workspace = true }

rusqlite = { workspace = true }
env_logger = { workspace = true }
